# tensor-optix

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  PLAN.md  README.md  ROADMAP.md  SECURITY.md  example_notebook_tensor_optix-XAUUSD Trading.ipynb  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
benchmarks/: benchmark.py
tensor_optix/: __init__.py  cli.py  config.py  factory.py  optimizer.py  orchestrator.py
tensor_optix/adapters/jax/: __init__.py  flax_agent.py  flax_evaluator.py
tensor_optix/adapters/pytorch/: __init__.py  torch_agent.py  torch_evaluator.py
tensor_optix/adapters/tensorflow/: __init__.py  tf_agent.py  tf_evaluator.py
tensor_optix/algorithms/: __init__.py  flax_ppo.py  tf_dqn.py  tf_ppo.py  tf_ppo_continuous.py  tf_sac.py  tf_td3.py  torch_dqn.py  torch_ppo.py  torch_ppo_continuous.py  torch_rainbow_dqn.py  torch_recurrent_ppo.py  torch_sac.py  torch_td3.py
tensor_optix/callbacks/: __init__.py  rich_dashboard.py  tensorboard_callback.py  wandb_callback.py
tensor_optix/core/: __init__.py  backoff_scheduler.py  base_agent.py  base_evaluator.py  base_optimizer.py  base_pipeline.py  checkpoint_registry.py  device.py  diagnostic_controller.py  ensemble_agent.py  her_buffer.py  loop_controller.py  meta_controller.py  noisy_linear.py  normalizers.py  policy_manager.py  regime_detector.py  replay_buffer.py  trajectory_buffer.py  types.py
tensor_optix/distributed/: __init__.py  async_learner.py  vtrace.py
tensor_optix/exploration/: __init__.py  rnd.py
tensor_optix/neuroevo/: __init__.py  brain_network.py  hebbian.py  neuromodulator.py
tensor_optix/neuroevo/agent/: __init__.py  graph_agent.py
tensor_optix/neuroevo/controller/: __init__.py  topology_controller.py
tensor_optix/neuroevo/graph/: __init__.py  neuron.py  neuron_graph.py  topology_ops.py
tensor_optix/optimizers/: __init__.py  adaptive_optimizer.py  backoff_optimizer.py  momentum_optimizer.py  pbt_optimizer.py  spsa_optimizer.py
tensor_optix/pipeline/: __init__.py  batch_pipeline.py  live_pipeline.py  vector_pipeline.py
tests/: conftest.py
tests/envs/: masked_cartpole.py  point_reach.py
tests/test_adapters/: test_tf_agent.py  test_tf_evaluator.py
tests/test_algorithms/: test_cache_fix.py  test_tf_dqn.py  test_tf_ppo.py  test_tf_sac.py  test_torch_dqn.py  test_torch_ppo.py  test_torch_ppo_continuous.py  test_torch_sac.py
tests/test_core/: test_backoff_scheduler.py  test_backoff_scheduler_min_episodes.py  test_checkpoint_registry.py  test_ensemble_agent.py  test_loop_controller.py  test_meta_controller.py  test_normalizers.py  test_policy_manager.py  test_population_control.py  test_regime_detector.py  test_spawn_budget.py  test_spawn_variant.py  test_trajectory_buffer.py  test_types.py  test_validation.py
tests/test_improvements/: conftest.py  test_01_callbacks.py  test_02_td3.py  test_03_multistep_sac.py  test_04_auto_select.py  test_05_her.py  test_06_recurrent_ppo.py  test_07_cli_yaml.py  test_08_onnx.py  test_09_rainbow.py  test_10_dashboard.py  test_11_distributed.py  test_12_jax.py
tests/test_integration/: test_end_to_end.py
tests/test_neuroevo/: test_benchmark.py  test_brain_network.py  test_dales_law.py  test_graph_agent.py  test_hebbian.py  test_neuromodulator.py  test_neuron.py  test_neuron_graph.py  test_topology_controller.py  test_topology_ops.py
tests/test_optimizers/: test_backoff_optimizer.py  test_pbt_optimizer.py
tests/test_pipeline/: test_batch_pipeline.py  test_live_pipeline.py
