[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tensor-optix"
version = "1.2.2"
description = "Autonomous training loop for any sequential learning model — built-in PPO, DQN, and SAC for TensorFlow and PyTorch"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "sup3rus3r" },
]

dependencies = [
    "tensorflow>=2.18.0",
    "gymnasium>=1.0.0",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "optuna>=3.0.0",
]

[project.optional-dependencies]
torch = [
    "torch>=2.0.0",
    "torchvision",
    "torchaudio",
]
cuda = [
    "nvidia-cuda-nvcc-cu12",
]
box2d = [
    "gymnasium[box2d]>=1.0.0",
]
atari = [
    "gymnasium[atari]>=1.0.0",
    "ale-py>=0.8",
]
mujoco = [
    "gymnasium[mujoco]>=1.0.0",
]
all = [
    "torch>=2.0.0",
    "torchvision",
    "torchaudio",
    "gymnasium[atari]>=1.0.0",
    "gymnasium[mujoco]>=1.0.0",
    "ale-py>=0.8",
]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "black",
    "ruff",
    "mypy",
    "twine>=5.0",
    "torch>=2.0.0",
]

[tool.setuptools]
license-files = []

[tool.setuptools.packages.find]
include = ["tensor_optix*"]

[tool.uv.sources]
torch = { index = "pytorch-cu128" }
torchvision = { index = "pytorch-cu128" }
torchaudio = { index = "pytorch-cu128" }

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
