[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tensor-optix"
version = "1.9.0"
description = "Autonomous training loop for any sequential learning model — built-in PPO, DQN, and SAC for TensorFlow and PyTorch"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "sup3rus3r" },
]

dependencies = [
    "tensorflow[and-cuda]>=2.18.0",
    "gymnasium[box2d]>=1.0.0",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "optuna>=3.0.0",
    "swig>=4.4.1",
    "pyyaml>=6.0",
    "torch>=2.11.0",
]

[project.scripts]
tensor-optix = "tensor_optix.cli:main"

[project.optional-dependencies]
torch = [
    "torch>=2.0.0",
    "torchvision",
    "torchaudio",
]
cuda = [
    "nvidia-cuda-nvcc-cu12",
]
box2d = [
    "gymnasium[box2d]>=1.0.0",
]
atari = [
    "gymnasium[atari]>=1.0.0",
    "ale-py>=0.8",
]
mujoco = [
    "gymnasium[mujoco]>=1.0.0",
]
all = [
    "torch>=2.0.0",
    "torchvision",
    "torchaudio",
    "gymnasium[atari]>=1.0.0",
    "gymnasium[mujoco]>=1.0.0",
    "ale-py>=0.8",
    "jax>=0.10.0",
    "flax>=0.12.6",
    "optax>=0.2.8",
]
onnx = [
    "onnx>=1.14",
    "onnxruntime>=1.16",
    "onnxscript>=0.1",
]
wandb = [
    "wandb>=0.16",
]
tensorboard = [
    "torch>=2.0.0",
    "tensorboard>=2.14",
]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "black",
    "ruff",
    "mypy",
    "twine>=5.0",
    "torch>=2.0.0",
]
jax = [
    "flax>=0.12.6",
    "jax>=0.10.0",
    "optax>=0.2.8",
]

[tool.setuptools]
license-files = []

[tool.setuptools.packages.find]
include = ["tensor_optix*"]

[tool.uv.sources]
torch = { index = "pytorch-cu128" }
torchvision = { index = "pytorch-cu128" }
torchaudio = { index = "pytorch-cu128" }

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: marks tests that perform full training runs (deselect with -m 'not slow')",
]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
