[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tensor-optix"
version = "1.14.1"
description = "Autonomous training loop for any sequential learning model — PPO, DQN, SAC, TD3, Rainbow DQN, Recurrent PPO for TensorFlow, PyTorch, and JAX/Flax; distributed async actor-learner (IMPALA + V-trace)"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "sup3rus3r" },
]

dependencies = [
    "gymnasium[box2d]>=1.0.0",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "optuna>=3.0.0",
    "swig>=4.4.1",
    "pyyaml>=6.0",
    "tensorflow==2.18.0",
]

[project.scripts]
tensor-optix = "tensor_optix.cli:main"

[project.optional-dependencies]
# ML frameworks — install the one(s) matching your platform (see README)
tensorflow = [
    "tensorflow>=2.18.0",
]
tensorflow-gpu = [
    "tensorflow[and-cuda]>=2.18.0; sys_platform == 'linux'",
]
torch = [
    "torch>=2.11.0",
    "torchvision",
    "torchaudio",
]
jax = [
    "flax>=0.12.6",
    "jax>=0.10.0",
    "optax>=0.2.8",
]
# CUDA compiler tools — Linux/WSL2 with NVIDIA GPU only
cuda = [
    "nvidia-cuda-nvcc-cu12; sys_platform == 'linux'",
    "tensorflow[and-cuda]>=2.18.0; sys_platform == 'linux'",
]
# Gymnasium environment extras
box2d = [
    "gymnasium[box2d]>=1.0.0",
]
atari = [
    "gymnasium[atari]>=1.0.0",
    "ale-py>=0.8",
]
mujoco = [
    "gymnasium[mujoco]>=1.0.0",
]
# Convenience bundles
all = [
    "tensorflow>=2.18.0",
    "torch>=2.11.0",
    "torchvision",
    "torchaudio",
    "gymnasium[atari]>=1.0.0",
    "gymnasium[mujoco]>=1.0.0",
    "ale-py>=0.8",
    "jax>=0.10.0",
    "flax>=0.12.6",
    "optax>=0.2.8",
    "torch>=2.11.0",
]
neuroevo = [
    "torch>=2.11.0",
]
onnx = [
    "onnx>=1.14",
    "onnxruntime>=1.16",
    "onnxscript>=0.1",
]
wandb = [
    "wandb>=0.16",
]
tensorboard = [
    "torch>=2.11.0",
    "tensorboard>=2.14",
]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "black",
    "ruff",
    "mypy",
    "twine>=5.0",
    "torch>=2.11.0",
]

[tool.setuptools]
license-files = []

[tool.setuptools.packages.find]
include = ["tensor_optix*"]


[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: marks tests that perform full training runs (deselect with -m 'not slow')",
]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
